--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/syfxlin/reve#readme",
   "dependencies": {
     "@vanilla-extract/css-utils": "^0.1.3",
+    "@vanilla-extract/dynamic": "^2.0.3",
     "clsx": "^2.0.0",
     "stylis": "^4.3.0"
   },
