--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsup",
-    "watch": "tsup --watch"
+    "build": "unbuild",
+    "watch": "unbuild --stub"
   },
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -64,8 +64,8 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsup": "^7.2.0",
     "typescript": "^5.2.2",
+    "unbuild": "^2.0.0",
     "vite": "^4.4.9"
   }
 }
