--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "@syfxlin/reve",
+  "type": "module",
   "version": "0.0.0-semantic-release",
   "description": "Support for css-prop-like API and flexible theme system for vanilla-extract.",
   "author": "Otstar Lin <i@ixk.me>",
   "license": "MIT",
+  "homepage": "https://github.com/syfxlin/reve#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/syfxlin/reve.git"
+  },
+  "bugs": {
+    "url": "https://github.com/syfxlin/reve/issues"
+  },
   "keywords": [
     "vanilla-extract",
     "styled-components",
@@ -13,59 +22,50 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "dev": "vite",
-    "build": "unbuild",
-    "watch": "unbuild --stub"
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "files": [
     "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/syfxlin/reve.git"
-  },
-  "bugs": {
-    "url": "https://github.com/syfxlin/reve/issues"
-  },
-  "homepage": "https://github.com/syfxlin/reve#readme",
-  "dependencies": {
-    "@vanilla-extract/css-utils": "^0.1.3",
-    "@vanilla-extract/dynamic": "^2.0.3",
-    "clsx": "^2.0.0",
-    "stylis": "^4.3.0"
+  "scripts": {
+    "dev": "vite",
+    "build": "bunchee",
+    "watch": "bunchee --watch"
   },
   "peerDependencies": {
     "@vanilla-extract/css": "^1.12.0"
   },
+  "dependencies": {
+    "@vanilla-extract/css-utils": "^0.1.3",
+    "@vanilla-extract/dynamic": "^2.1.0",
+    "clsx": "^2.1.0",
+    "stylis": "^4.3.1"
+  },
   "devDependencies": {
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@types/stylis": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vanilla-extract/vite-plugin": "^3.9.0",
-    "@vitejs/plugin-react": "^4.0.4",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "prettier": "^3.0.3",
+    "@syfxlin/eslint-config": "^1.0.4",
+    "@types/react": "^18.2.63",
+    "@types/react-dom": "^18.2.20",
+    "@types/stylis": "^4.2.5",
+    "@vanilla-extract/vite-plugin": "^4.0.4",
+    "@vitejs/plugin-react": "^4.2.1",
+    "bunchee": "^4.4.8",
+    "eslint": "^8.57.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.2.2",
-    "unbuild": "^2.0.0",
-    "vite": "^4.4.9"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.5"
   }
 }
